force-app/main/default/objects/Phenotype_Request__c/Phenotype_Request__c.object-meta.xml
<CustomObject>
    <label>Phenotype Request</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Phenotype Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phenotype Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>