force-app/main/default/objects/Phenotype_Request__c/fields/Case_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Case_Criteria__c</fullName>
    <label>Case Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>