force-app/main/default/objects/Phenotype_Request__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <label>Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cohort 1</fullName>
            </value>
            <value>
                <fullName>Cohort 2</fullName>
            </value>
            <value>
                <fullName>Cohort 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>