force-app/main/default/objects/Phenotype_Request__c/fields/Custom_RGC_Phenotype_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_RGC_Phenotype_Name__c</fullName>
    <label>Custom RGC Phenotype Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>