force-app/main/default/objects/Phenotype_Request__c/fields/Data_Dictionary__c.field-meta.xml
<CustomField>
    <fullName>Data_Dictionary__c</fullName>
    <label>Data Dictionary</label>
    <type>Url</type>
</CustomField>