force-app/main/default/objects/Phenotype_Request__c/fields/Phenotype_Stage__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Stage__c</fullName>
    <label>Phenotype Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>