force-app/main/default/objects/Phenotype_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>