force-app/main/default/objects/Phenotype_Request__c/fields/Type_of_Phenotype__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Phenotype__c</fullName>
    <label>Type of Phenotype</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>QT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>